# stem

./: README.md
master/: CMakeLists.txt  main.c  stem_master.c  stem_master.h  stem_master.pio
protocol/: stem_protocol.h
slave/: CMakeLists.txt  main.c  stem_slave.c  stem_slave.h  stem_slave.pio
